syntax = "proto3";

package gosionsvc.external.permission;

import "konekko.me/gosion/commons/dto/commons.proto";

service Binding {

    rpc UserRole (BindingRoleRequest) returns (gs.commons.dto.Status);

    rpc FunctionRole (BindingRoleRequest) returns (gs.commons.dto.Status);

    rpc UnbindUserRole (BindingRoleRequest) returns (gs.commons.dto.Status);

    rpc UnbindFunctionRole (BindingRoleRequest) returns (gs.commons.dto.Status);
}

message BindingRoleRequest {
    string appId = 1;
    string id = 2;
    string roleId = 3;
}
