syntax = "proto3";

package xbasissvc.external.permission;

import "konekko.me/xbasis/commons/dto/commons.proto";

//组结构
service UserGroup {

    rpc Add (SimpleGroup) returns (xbasis.commons.dto.Status);

    rpc Remove (SimpleGroup) returns (xbasis.commons.dto.Status);

    rpc Rename (SimpleGroup) returns (xbasis.commons.dto.Status);

    rpc AddUser (AddUserRequest) returns (xbasis.commons.dto.Status);

    rpc MoveUser (SimpleUserNode) returns (xbasis.commons.dto.Status);

    rpc GetGroupItems (GetGroupItemsRequest) returns (GetGroupItemsResponse);

    rpc GetGroupItemDetail (GetGroupItemDetailRequest) returns (GetGroupItemDetailResponse);

    rpc GetGroupContentSize (GetGroupContentSizeRequest) returns (GetGroupContentSizeResponse);


}

message GetGroupContentSizeRequest {
    string appId = 1;
    string id = 2;
}

message GetGroupContentSizeResponse {
    xbasis.commons.dto.State state = 1;
    int64 users = 2;
    int64 groups = 3;
}

message GetGroupItemsRequest {
    string id = 1;
    string appId = 2;
    bool includeUser = 3;
}

message GetGroupItemsResponse {
    xbasis.commons.dto.State state = 1;
    repeated GroupItem data = 2;
}

message GetGroupItemDetailRequest {
    string id = 1;
    string appId = 2;
}

message GroupItem {
    string name = 1;
    bool user = 2;
    string icon = 3;
    string id = 4;
}

message GetGroupItemDetailResponse {
    xbasis.commons.dto.State state = 1;
    DetailItem data = 2;
}

message DetailItem {
    string username = 1;
    string icon = 2;
    repeated DetailBindRole roles = 3;
    string realName = 4;
}

message DetailBindRole {
    string name = 1;
    string id = 2;
}

message SimpleGroup {
    string appId = 1;
    string name = 2;
    string id = 3;
    string bindGroupId = 4;
}

message SimpleUserNode {
    string userId = 1;
    string appId = 2;
    string groupId = 3;
}

message AddUserRequest {
    string userId = 1;
    string appId = 2;
    repeated string groupIds = 3;
}